--- a/DV_project_1.Rmd
+++ b/DV_project_1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "DV_project_Dasaradha_Prashob"
 output: html_document
-Project: Version_8
+Project: Version_9
 ---
 ---------------------
 Measeles cases over Time
@@ -218,21 +218,62 @@ ggplot(heatmap_df, aes(x = year, y = loc, fill = incidence)) +
 # ggsave("measles_heatmap_top20.png", width = 12, height = 10, units = "in", dpi = 300)
 
 ```
+
 ```{r}
-# Beautiful bar chart of seasonal averages with 95% CI
-ggplot(season_summary, aes(x = season, y = avg_cases)) +
-  # 95% confidence interval as error bars
+library(ggplot2)
+library(dplyr)
+library(lubridate)
+library(scales)
+library(viridis)
+
+# 1. Read the measles data ---------------------------------------------------
+measles_df <- read.csv("measles_data.csv", stringsAsFactors = FALSE)
+
+# Ensure date column is Date
+measles_df$from_date <- as.Date(measles_df$from_date)
+
+# 2. Create month and season -------------------------------------------------
+measles_df <- measles_df %>%
+  mutate(
+    month = month(from_date),
+    season = case_when(
+      month %in% c(12, 1, 2) ~ "Winter",
+      month %in% c(3, 4, 5) ~ "Spring",
+      month %in% c(6, 7, 8) ~ "Summer",
+      month %in% c(9, 10, 11) ~ "Fall"
+    )
+  )
+
+# 3. Build season_summary with mean, SD, SE, CI ------------------------------
+season_summary <- measles_df %>%
+  group_by(season) %>%
+  summarise(
+    avg_cases    = mean(number, na.rm = TRUE),
+    median_cases = median(number, na.rm = TRUE),
+    sd_cases     = sd(number, na.rm = TRUE),
+    n            = n(),
+    se           = sd_cases / sqrt(n),
+    ci_lower     = avg_cases - 1.96 * se,
+    ci_upper     = avg_cases + 1.96 * se,
+    .groups      = "drop"
+  )
+
+# Order seasons
+season_summary$season <- factor(
+  season_summary$season,
+  levels = c("Winter", "Spring", "Summer", "Fall")
+)
+
+# 4. Beautiful bar chart of seasonal averages with 95% CI --------------------
+p <- ggplot(season_summary, aes(x = season, y = avg_cases)) +
   geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper),
                 width = 0.25,
                 linewidth = 0.7,
                 color = "#2C3E50") +
-  # Main bars
   geom_col(aes(fill = season),
            width = 0.6,
            color = "white") +
-  # Nice color palette for seasons
   scale_fill_viridis_d(option = "C", end = 0.9, direction = 1) +
-  # Value labels on top of bars
   geom_text(aes(label = comma(round(avg_cases, 0))),
             vjust = -0.5,
             size = 3.8,
@@ -266,10 +307,14 @@ ggplot(season_summary, aes(x = season, y = avg_cases)) +
   scale_y_continuous(labels = comma,
                      expand = expansion(mult = c(0.05, 0.15)))
 
-ggsave("measles_seasonal_bar.png", width = 10, height = 6, dpi = 300)
+print(p)
 
-
+ggsave("measles_seasonal_bar.png", plot = p,
+       width = 10, height = 6, dpi = 300)
 ```
+
+
+
 
 ```{r}
 # Load required libraries for plotting, data manipulation, dates, and formatting
